--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --watch app.js"
   },
-  "keywords": ["express", "tienda"],
+  "keywords": [
+    "express",
+    "tienda"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.22.1"
   }
 }
